--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 :root .card {
     background: rgb(195,97,34);
     background: linear-gradient(0deg, rgba(195,97,34,1) 0%, rgba(253,187,45,1) 100%);
@@ -8,25 +10,28 @@
     display: flex;
     flex: wrap;
     align-items: center;
-    padding: 15px;
     border-top-left-radius: 0px;
+    padding: 10px;
 }
 
 :root p {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    display: inline;
+    align-items: center;
     color: black;
-    font-size: 35px;
-    padding-right: 20px;
+    font-size: 24px;
 }
 
-:root header nav ul {
+
+:root nav ul {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     display: flex;
     justify-content: center;
     gap: 8px;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 :root a {
     color: rgb(46, 54, 16);
 }
+
