updated pages visibility

--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
+body {
+    background-color: rgb(73, 69, 69);
+    height: 100vh;
+}
 
+:root {
+    h1 {
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        color: white;
+    }
+    p {
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    a {
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+}
 
 :root .card {
     background: rgb(195,97,34);
@@ -15,27 +31,42 @@
 }
 
 :root p {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     display: inline;
     align-items: center;
-    color: rgb(251, 251, 251);
     font-size: 24px;
 }
 
 
 :root nav ul {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     display: flex;
     justify-content: center;
     gap: 8px;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 :root a {
-    color: rgb(45, 24, 24);
+    color: rgb(225, 221, 221);
 }
 
 :root .container {
     margin: 25px;
     width: auto;
 }
+
+:root #wrapper {
+    display: flex;
+    flex: wrap;
+    margin: 10px;
+}
+
+:root .button.is-primary {
+    background-color: rgb(167, 167, 167);
+}
+
+
+.rubik-.font {
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
